force-app/main/default/objects/Master_Answer__c/Master_Answer__c.object-meta.xml
<CustomObject>
    <label>Master Answer</label>
    <nameField>
        <displayFormat>MA-{000000}</displayFormat>
        <label>Seq. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Answer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>