force-app/main/default/objects/Master_Answer__c/fields/AnswerGroupCode__c.field-meta.xml
<CustomField>
    <fullName>AnswerGroupCode__c</fullName>
    <description>답변 그룹</description>
    <label>Answer Group Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>