force-app/main/default/objects/Master_Answer__c/fields/MasterQuestion__c.field-meta.xml
<CustomField>
    <fullName>MasterQuestion__c</fullName>
    <label>Master Question</label>
    <referenceTo>Master_Question__c</referenceTo>
    <relationshipLabel>Master Answer</relationshipLabel>
    <relationshipName>Master_Answer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>